spacing issues

--- a/src/app/etl/templates/components/TemplateEditorField.less
+++ b/src/app/etl/templates/components/TemplateEditorField.less
@@ -36,13 +36,12 @@
 // template editor field
 
 .field-settings-label-group {
-
+  flex: 0 0 160px;
+  display: flex;
 }
 
 .field-settings-label {
   padding: @half-spacing;
-  padding-right: 0px;
-  width: 150px;
 }
 
 .field-settings-preview {
